Fixes social networks z-index issues

--- a/src/org/accesointeligente/client/views/HomeView.css
+++ b/src/org/accesointeligente/client/views/HomeView.css
@@ -222,7 +222,7 @@ div {
 
 .sharePanel {
 	position:fixed;
-	top: 70px;
+	top: 175px;
 	margin-left: -80px;
 	z-index: 1;
 }
