--- a/src/org/accesointeligente/client/views/RequestResponseView.css
+++ b/src/org/accesointeligente/client/views/RequestResponseView.css
@@ -120,7 +120,7 @@
 
 .sharePanel {
 	position:fixed;
-	top: 70px;
+	top: 175px;
 	margin-left: -80px;
-	z-index: -1;
+	z-index: 1;
 }
